--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ DB_USERNAME=
 DB_PASSWORD=
 DB_NAME=test
 DB_HOSTNAME=localhost
+DB_DIALECT=postgres
+DATABASE_URL=postgres://<db_user>:<db_password>@127.0.0.1:5432/test
+# To use mysql/mariadb, change DB_DIALECT to the corresponding dialect, and comment out DATABASE_URL
